@@ -680,6 +680,8 @@ EXTRA_DIST = \
   poke.pkl/arrays-index-diag-1.pk \
   poke.pkl/arrays-index-diag-2.pk \
   poke.pkl/arrays-index-diag-3.pk \
+  poke.pkl/arrays-index-diag-4.pk \
+  poke.pkl/arrays-index-diag-5.pk \
   poke.pkl/arrays-initializer-diag-1.pk \
   poke.pkl/arrays-initializer-diag-2.pk \
   poke.pkl/array-integ-1.pk \
